--- a/public/album/admin/css/main.css
+++ b/public/album/admin/css/main.css
@@ -16,6 +16,10 @@
     border:none;
     padding:0;
 }
+
+.grid .mini{
+    width:160px;
+}
 .grid .sel_on{
     background:#eee;
 }
@@ -57,6 +61,10 @@
     background:#fff;
     border-radius:3px;
 } 
+.grid .mini .pic_box img{
+    max-width: 150px;
+    max-height: 150px;
+}
 .grid .pic_box table{width:100%}
 .grid .pic_box table td{
     text-align: left;
@@ -90,6 +98,9 @@
 }
 .grid .info .title .name input{
     width:180px;
+}
+.grid .mini .info .title{
+    width: 160px;
 }
 .grid .sel_on .info .title .name a{
     display:block;
