--- a/public/base/admin/css/upload.css
+++ b/public/base/admin/css/upload.css
@@ -73,7 +73,7 @@ img{border:none;}
     font-style: normal;
 }
 .filelist div.pages a.on{
-    background: #f17727;
+    background: #1a93de;
     color:#fff;
 }
 .filesearch{
