回收站管理。

--- a/public/base/admin/css/admin.css
+++ b/public/base/admin/css/admin.css
@@ -241,6 +241,12 @@ a.i-add{
     font-size: 14px;
     font-weight: bold;
 }
+a.i-clear{
+    background: url(../images/i-clear.png) no-repeat left 1px;
+    padding-left:20px;
+    font-size: 14px;
+    font-weight: bold;
+}
 a.i-import{
     background: url(../images/i-import.png) no-repeat left -1px;
     padding-left:20px;
