--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -363,7 +363,10 @@ div.pages a.on{
 .list-body{
     padding: 20px 40px;
     min-height: 800px;
+    /*max-width: 1800px;*/
+    margin:0 auto;
 }
+
 .justified-gallery{
     z-index: 1;
 }
@@ -670,13 +673,13 @@ div.pages a.on{
     height: 32px; 
     background: url(../images/check.png) no-repeat center;
 }
-
+/*
 div.main-container{
     position: relative;
     min-height: 548px;
     background: #000;
-    border-top: 1px solid #1c1d1e;
-}
+    height: 100%;
+}*/
 
 div.sidebar-region{
     position: absolute;
@@ -687,6 +690,7 @@ div.sidebar-region{
     right: 0;
     overflow: auto;
     color:#aaa;
+    background-color: #000;
 }
 div.sidebar-region a{
     color:#fff;
@@ -729,6 +733,77 @@ div.photo-container img.photo{
     margin: auto;
     width: auto;
     height: auto;
+    cursor: zoom-in;
+}
+div.photo-container a.close{
+    display: block;
+    position: absolute;
+    right:10px;
+    top: 10px;
+    width:32px;
+    height: 32px;
+    background: url(../images/close.png) no-repeat center;
+    z-index: 1001;
+}
+div.photo-container a.fullscreen{
+    display: block;
+    position: absolute;
+    left:10px;
+    top: 10px;
+    width:32px;
+    height: 32px;
+    background: url(../images/fullscreen.png) no-repeat center;
+    z-index: 1001;
+}
+div.photo-container a.icon-like{
+    display: none;
+    position: absolute;
+    right:10px;
+    top: 10px;
+    padding-left:36px;
+    width:40px;
+    height: 32px;
+    line-height: 32px;
+    color:#e6e6e6;
+    background: url(../images/b-heart.png) no-repeat left;
+    z-index: 1001;
+}
+div.photo-container a.btn-prev{
+    opacity: 0;
+    width: 80px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left:0px;
+    background: url(../images/a-left.png) no-repeat 10px center;
+}
+div.photo-container a.btn-next{
+    opacity: 0;
+    width: 80px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    right:0px;
+    background: url(../images/a-right.png) no-repeat 35px center;
+}
+div.photo-container a.btn-prev:hover,div.photo-container a.btn-next:hover{
+    opacity: 1;
+}
+div.fullscreen div.photo-container{
+    width:100%;
+    border-right: none;
+}
+div.fullscreen div.photo-container a.close{
+    display: none;
+}
+div.fullscreen div.photo-container a.close{
+    display: none;
+}
+div.fullscreen div.photo-container a.icon-like{
+    display: block;
+}
+div.fullscreen div.sidebar-region{
+    display: none;
 }
 div.sidebar-region .sidebar-actions{
     padding:10px;
@@ -869,4 +944,14 @@ div.sidebar-region .sidebar-edit a{
     display: inline-block;
     width: 70px;
     text-align: center;
+}
+div.viewphoto{
+    position: fixed;
+    z-index: 1000;
+    top:0;
+    left:0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
 }
