登录注册页背景

--- a/templates/default/css/login.css
+++ b/templates/default/css/login.css
@@ -1,6 +1,7 @@
 /* 登陆页面 */
 *{box-sizing: border-box;}
-body{background:url('../images/login_bg.jpg') no-repeat #e9f0f4;font-size:14px;font-family: "Hiragino Sans GB","Helvetica Neue","Microsoft YaHei","微软雅黑",Helvetica,STHeiTi,Arial,sans-serif;}
+html,body{min-height: 100%;}
+body{background-color:#36465d;background: linear-gradient(0deg, #375176 1%, #36465d 100%);filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#375176',endColorStr='#36465d',gradientType='0'); font-size:14px;font-family: "Hiragino Sans GB","Helvetica Neue","Microsoft YaHei","微软雅黑",Helvetica,STHeiTi,Arial,sans-serif;}
 button, html input[type="button"], input[type="reset"], input[type="submit"] {cursor: pointer;}
 input[type="text"],input[type="email"],input[type="password"],textarea{outline: none;}
 #wrapper{position: relative;margin-bottom:20px;padding-top:100px;}
@@ -85,7 +86,7 @@ a{text-decoration: none;}
 a{color: #5fb336;}
 .login-box .mod-footer{height: 70px;line-height:70px;background-color: #f5f5f5;padding:0 60px;color: #5fb336;}
 .login-box .mod-footer span{color: #666;}
-.footer-wrap{color: #666;text-align: center;font-size: 12px;}
+.footer-wrap{color: #bbb;text-align: center;font-size: 12px;}
 
 /* 注册页面 */
 .register-box{width: 714px;height: auto;margin:100px auto 40px;padding:50px 0;background:#fff;border:1px solid #b3b3b3;border-radius: 3px;text-align: center;}
